<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_network_connection_and_try_again">Please check your network connection \n and try again</string>
    <string name="retry_cap">Retry</string>
    <string name="save_error">Sever Error</string>
    <string name="unable_to_connect_to_server_please_try_again">Unable to connect to server, \n please try again</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="get_latest_message_notifications_from_the_app_so_you_don_t_miss_any_moment">Get latest message notifications from the app so you don\'t miss any moment!</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not now</string>
    <string name="delete">Delete</string>
</resources>