<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_24"
    android:theme="@style/Theme.AppCompat"
    android:backgroundTint="@color/color_262626"
    >


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/phoneContainer"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:background="@drawable/img_bg_notification"
        app:shapeAppearanceOverlay="@style/RoundedTopImageView"
        />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/allow_notification"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/get_latest_message_notifications_from_the_app_so_you_don_t_miss_any_moment"
        android:textColor="#CCCCCC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:fontFamily="@font/lato_regular"
        android:layout_marginHorizontal="16dp"
        />


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNotNow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_gardien_radius_12"
            android:backgroundTint="@color/color_434343"
            android:text="@string/not_now"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato_bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAllow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_gardien_radius_12"
            android:text="@string/allow"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/lato_bold"
            android:layout_marginEnd="16dp"
            android:textAllCaps="false"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>