<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/border_32_rectangle"
    android:theme="@style/Theme.AppCompat"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="23dp"
        android:src="@drawable/ic_cancel_dialog"
        android:scaleType="centerCrop"
        android:id="@+id/cancelDialog"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgTypeDialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgTypeDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/titleDialog"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textColor="@color/color_FFFFFF"
        />

    <TextView
        android:id="@+id/contentNotificationDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleDialog"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="4dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:textColor="@color/color_FFFFFF99"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/contentNotificationDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_btn_gardien_radius_12"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/retry"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/color_FFFFFF"
        android:textAllCaps="false"
        tools:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentNotificationDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:visibility="invisible"
        tools:visibility="visible"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_gardien_radius_12"
            android:backgroundTint="@color/color_434343"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:layout_marginBottom="16dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_gardien_radius_12"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:textAllCaps="false"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>